rbx_binary/src/tests/snapshots/rbx_binary__tests__util__two-particleemitters__input.snap
---
source: rbx_binary/src/tests/util.rs
expression: text_decoded
---
num_types: 1
num_instances: 2
chunks:
  - Meta:
      entries:
        - - ExplicitAutoJoints
          - "true"
  - Inst:
      type_id: 0
      type_name: ParticleEmitter
      object_format: 0
      referents:
        - 0
        - 1
  - Prop:
      type_id: 0
      prop_name: Acceleration
      prop_type: Vector3
      values:
        - - 0.0
          - 0.0
          - 0.0
        - - 0.0
          - 0.0
          - 0.0
  - Prop:
      type_id: 0
      prop_name: AttributesSerialize
      prop_type: String
      values:
        - ""
        - ""
  - Prop:
      type_id: 0
      prop_name: Color
      prop_type: ColorSequence
      values:
        - Keypoints:
            - Time: 0.0
              Color:
                - 1.0
                - 1.0
                - 1.0
            - Time: 1.0
              Color:
                - 1.0
                - 1.0
                - 1.0
        - Keypoints:
            - Time: 0.0
              Color:
                - 1.0
                - 1.0
                - 1.0
            - Time: 1.0
              Color:
                - 1.0
                - 1.0
                - 1.0
  - Prop:
      type_id: 0
      prop_name: Drag
      prop_type: Float32
      values:
        - 0.0
        - 0.0
  - Prop:
      type_id: 0
      prop_name: EmissionDirection
      prop_type: Enum
      values:
        - 1
        - 1
  - Prop:
      type_id: 0
      prop_name: Enabled
      prop_type: Bool
      values:
        - true
        - true
  - Prop:
      type_id: 0
      prop_name: Lifetime
      prop_type: NumberRange
      values:
        - - -20.200000762939454
          - 10.100000381469727
        - - -20.200000762939454
          - 10.100000381469727
  - Prop:
      type_id: 0
      prop_name: LightEmission
      prop_type: Float32
      values:
        - 0.0
        - 0.0
  - Prop:
      type_id: 0
      prop_name: LightInfluence
      prop_type: Float32
      values:
        - 1.0
        - 1.0
  - Prop:
      type_id: 0
      prop_name: LockedToPart
      prop_type: Bool
      values:
        - false
        - false
  - Prop:
      type_id: 0
      prop_name: Name
      prop_type: String
      values:
        - ParticleEmitter
        - ParticleEmitter
  - Prop:
      type_id: 0
      prop_name: Rate
      prop_type: Float32
      values:
        - 2.0
        - 2.0
  - Prop:
      type_id: 0
      prop_name: RotSpeed
      prop_type: NumberRange
      values:
        - - 45.0
          - 46.0
        - - 45.0
          - 46.0
  - Prop:
      type_id: 0
      prop_name: Rotation
      prop_type: NumberRange
      values:
        - - -6.659999847412109
          - 6.659999847412109
        - - -6.659999847412109
          - 6.659999847412109
  - Prop:
      type_id: 0
      prop_name: Size
      prop_type: NumberSequence
      values:
        - Keypoints:
            - Time: 0.0
              Value: 1.0
              Envelope: 0.0
            - Time: 0.08036739379167557
              Value: 0.5624997615814209
              Envelope: 0.0
            - Time: 0.12169919162988663
              Value: 1.9374996423721314
              Envelope: 0.0
            - Time: 0.14351320266723634
              Value: 3.75
              Envelope: 0.0
            - Time: 1.0
              Value: 1.0
              Envelope: 0.0
        - Keypoints:
            - Time: 0.0
              Value: 1.0
              Envelope: 0.0
            - Time: 0.08036739379167557
              Value: 0.5624997615814209
              Envelope: 0.0
            - Time: 0.12169919162988663
              Value: 1.9374996423721314
              Envelope: 0.0
            - Time: 0.14351320266723634
              Value: 3.75
              Envelope: 0.0
            - Time: 1.0
              Value: 1.0
              Envelope: 0.0
  - Prop:
      type_id: 0
      prop_name: SourceAssetId
      prop_type: Int64
      values:
        - -1
        - -1
  - Prop:
      type_id: 0
      prop_name: Speed
      prop_type: NumberRange
      values:
        - - 2.0
          - 5.0
        - - 2.0
          - 5.0
  - Prop:
      type_id: 0
      prop_name: SpreadAngle
      prop_type: Vector2
      values:
        - - 0.0
          - 0.0
        - - 0.0
          - 0.0
  - Prop:
      type_id: 0
      prop_name: Tags
      prop_type: String
      values:
        - ""
        - ""
  - Prop:
      type_id: 0
      prop_name: Texture
      prop_type: String
      values:
        - "rbxasset://textures/particles/sparkles_main.dds"
        - "rbxasset://textures/particles/sparkles_main.dds"
  - Prop:
      type_id: 0
      prop_name: Transparency
      prop_type: NumberSequence
      values:
        - Keypoints:
            - Time: 0.0
              Value: 0.0
              Envelope: 0.0
            - Time: 1.0
              Value: 0.0
              Envelope: 0.0
        - Keypoints:
            - Time: 0.0
              Value: 0.0
              Envelope: 0.0
            - Time: 1.0
              Value: 0.0
              Envelope: 0.0
  - Prop:
      type_id: 0
      prop_name: VelocityInheritance
      prop_type: Float32
      values:
        - 0.0
        - 0.0
  - Prop:
      type_id: 0
      prop_name: ZOffset
      prop_type: Float32
      values:
        - 0.0
        - 0.0
  - Prnt:
      version: 0
      links:
        - - 0
          - -1
        - - 1
          - -1
  - End
